search and addCode

--- a/src/app/src/_modules/home/course-detail/course-detail.component.html
+++ b/src/app/src/_modules/home/course-detail/course-detail.component.html
@@ -5,7 +5,7 @@
         <h3 class="display-4">{{tenKh}}</h3>
         <div class="d-flex justify-content-between">
             <div>
-                <span>Đánh Giá</span>
+                <span class="mr-2">Đánh Giá</span>
                 <ng-container *ngFor='let star of danhGia'>
                     <i class="fa fa-star" ></i>
                 </ng-container>
