--- a/src/app/src/_modules/home/course-list/course-list.component.html
+++ b/src/app/src/_modules/home/course-list/course-list.component.html
@@ -31,12 +31,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -59,12 +59,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -91,10 +91,10 @@
                                         <span class="number_rating">(11.597)</span>
                                         <div class="price">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -120,12 +120,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -149,12 +149,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -179,12 +179,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -209,12 +209,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
@@ -239,12 +239,12 @@
                                         </span>
                                         <span class="number_average">4.6</span>
                                         <span class="number_rating">(11.597)</span>
-                                        <div class="price">
+                                        <div class="price text-center">
 
-                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | currency:'VND':'symbol':'3.0-1'}}
+                                            <p class="mb-0">Giá: {{khoahoc.GiaTien | number:'.0'}}<sup>đ</sup>
                                             </p>
                                             <a routerLink='/learn-continue/{{khoahoc.id}}/{{khoahoc.MangKH_id}}'
-                                                class="text-center">Xem Chi Tiết</a>
+                                                class="text-center" class="btn btn-info">Xem Chi Tiết</a>
                                         </div>
                                     </div>
                                 </div>
