--- a/src/app/src/_modules/home/footer/footer.component.html
+++ b/src/app/src/_modules/home/footer/footer.component.html
@@ -6,7 +6,7 @@
                   <div class="widget about-widget">
                       <div class="widget-inner">
                           <a class="footer-logo" href="index.html">
-                              <img src="assets/images/template/logo-footer.png" alt="Footer logo">
+                              <img src="" alt="Footer logo">
                           </a>
                           <p class="about-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque, ducimus, atque. Praesentium suscipit provident explicabo dignissimos nostrum numquam deserunt earum accusantium et fugit.</p>
                           <div class="footer-social">
@@ -54,11 +54,7 @@
                       </div>
                   </div>
                   <div class="widget app-widget">
-                      <h3 class="widget-title">DTO Apps</h3>
-                      <div class="widget-inner">
-                          <a class="google-play-download" href="#"><img src="assets/images/icons/google-play.png" alt="Google Play Download"></a>
-                          <a class="apple-store-download" href="#"><img src="assets/images/icons/app-store.png" alt="Apple Store Download"></a>
-                      </div>
+                      
                   </div>
               </div>
           </div>
