--- a/src/app/src/_modules/home/home-page/home-page.component.html
+++ b/src/app/src/_modules/home/home-page/home-page.component.html
@@ -76,7 +76,7 @@
         <h5>Students are viewing</h5>
         <div class="owl-carousel owl-theme clonex2-carousel">
             <div class="card">
-                <img class="card-img-top" src="./img/kh13.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">The Ultimate MySQL Bootcamp: Go from SQL Beginner to Expert</h4>
@@ -97,7 +97,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/kh8.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">Learning Python for Data Analysis and Visualization</h4>
@@ -118,7 +118,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/kh9.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">Advanced CSS and Sass: Flexbox, Grid, Animations and More!</h4>
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/kh10.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">Modern JavaScript From The Beginning</h4>
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/kh11.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">Bootstrap 4 From Scratch With 5 Projects</h4>
@@ -181,7 +181,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="card-img-top" src="./img/kh12.jpg" alt="kh1" />
+                <img class="card-img-top" src="" alt="kh1" />
                 <div class="card-body">
                     <div class="card-body_content">
                         <h4 class="card-title">iOS 12 & Swift - The Complete iOS App Development Bootcamp</h4>
