--- a/src/app/src/_modules/home/cart/cart.component.html
+++ b/src/app/src/_modules/home/cart/cart.component.html
@@ -4,7 +4,7 @@
                 <div class="col-lg-12">
                     <div class="unica-breadcrumb">
                         <ol class="breadcrumb">
-                            <li class="breadcrumb-item active">Giỏ hàng (1 khóa học)</li>
+                            <li class="breadcrumb-item active">Giỏ hàng ({{count}} khóa học)</li>
                         </ol>
                     </div>
                 </div>
